--- a/app/src/main/res/layout/fragment_lost.xml
+++ b/app/src/main/res/layout/fragment_lost.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rah.soccerprototype.Lost">
+    tools:context="com.example.rah.soccerprototype.primaryview.fragments.Lost">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
